# nanopb

./: CMakeLists.txt  main.c
proto/: watchface.proto
